ajout images (stormtroopers)

--- a/slides/index.html
+++ b/slides/index.html
@@ -205,6 +205,7 @@
                     <p>Collègue, pendant une semaine, a pris son PC (fixe) et est venue en pair avec moi</p>
                     <aside class="notes">
                         <ul>
+                            <li>Ou the-death-star-plans-are-not-in-he-main-computer.jpg ?</li>
                             <li>Pas mal de perte d'efficacité</li>
                             <li>Côté positif : transmission (explication, réponse instantanée aux questions)</li>
                             <li>BEAUCOUP de mise à jour de documentations, en notant tout ce qui avait foiré lors de mon install</li>
@@ -369,7 +370,7 @@
                     </aside>
                 </section>
                 
-                <section data-background="./images/some-image.jpg">
+                <section data-background="./images/die-stormtrooper-die.jpg" class="inverted">
                     <h1>Questions ?</h1>
                     <aside class="notes">
                         ul>li
