--- a/slides/index.html
+++ b/slides/index.html
@@ -360,7 +360,7 @@
                     </aside>
                 </section>
                 
-                <section data-background="./images/some-image.jpg">
+                <section data-background="./images/the-troopers-contribution-to-the-cc-world-summit.jpg">
                     <p>Avant de conclure, un mot sur les photos</p>
                     <aside class="notes">
                         <ul>
