slides > données depuis prod

--- a/slides/index.html
+++ b/slides/index.html
@@ -232,6 +232,22 @@
                 </section>
                 
                 <section data-background="./images/some-image.jpg">
+                    <h2>Données</h2>
+                    <ul>
+                        <li>Bases de données : import depuis la prod</li>
+                        <li>Scripts pour adapter</li>
+                        <li>Indexations à partir des DB</li>
+                    </ul>
+                    <aside class="notes">
+                        <ul>
+                            <li>Backups réguliers en prod ; au besoin, on en récupère un</li>
+                            <li>Adapter = supprimer données confidentielles, anonymiser, ...</li>
+                            <li>Indexation : reconstruction depuis la DB, pour ce qui est généré par scripts (indexes moteurs de recherche, par exemple)</li>
+                        </ul>
+                    </aside>
+                </section>
+                
+                <section data-background="./images/some-image.jpg">
                     <h2>Docker</h2>
                     <ul>
                         <li>Pour certains projets</li>
