ajout slide 'todo'

--- a/slides/index.html
+++ b/slides/index.html
@@ -456,6 +456,18 @@
                     </aside>
                 </section>
                 
+                <section data-background="./images/a-hard-days-work.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
+                    <h2>TODO</h2>
+                    <ul>
+                        <li>Un mot sur la "résistance au changement" ?</li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <aside class="notes">
+                        ul>li
+                    </aside>
+                </section>
+                
                 <section data-background="./images/ready-for-takeoff.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
                     <h2>WIP</h2>
                     <ul>
