ajout slide exemple cookbook

--- a/slides/index.html
+++ b/slides/index.html
@@ -275,6 +275,19 @@
                     </aside>
                 </section>
                 
+                <section>
+                    <h2>Cookbook chef</h2>
+                    <pre class="stretch"><code data-trim>
+# Un bout de cookbook
+# Pour montrer à quoi ça ressemble
+                    </code></pre>
+                    <aside class="notes">
+                        <ul>
+                            <li>Pour montrer à quoi ça ressemble</li>
+                        </ul>
+                    </aside>
+                </section>
+                
                 <section data-background="./images/no-more-rabbits.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
                     <h2>Données</h2>
                     <ul>
