--- a/slides/index.html
+++ b/slides/index.html
@@ -193,7 +193,7 @@
                 </section>
 
                 <section class="without-darkback">
-                    <blockquote>«&nbsp;Comme ils ont du te dire, tu vas en avoir pour à peu près deux semaines à installer ton poste&nbsp;»</blockquote>
+                    <blockquote>«&nbsp;Comme ils ont dû te dire, tu vas en avoir pour à peu près deux semaines à installer ton poste&nbsp;»</blockquote>
                     <aside class="notes">
                         <ul>
                             <li>Un autre de mes collègues, quelques heures plus tard</li>
