Mod: back of the circonflex

--- a/slides/index.html
+++ b/slides/index.html
@@ -507,7 +507,7 @@ bin/atoum && bin/behat
 
 
                 <section data-background="./images/christmas-love.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <h2>Boite à outils</h2>
+                    <h2>Boîte à outils</h2>
                     <ul>
                         <li>Initialisation de l'env de dev</li>
                         <li>Connexion serveurs dev, preprod, prod</li>
