Mod: acronyms in capitals

--- a/slides/index.html
+++ b/slides/index.html
@@ -372,7 +372,7 @@ end
                     <h2>Pour les données ? Scripts !</h2>
                     <ul>
                         <li>(bash) Import depuis la prod</li>
-                        <li>(sql) Nettoyage des données sensibles</li>
+                        <li>(SQL) Nettoyage des données sensibles</li>
                     </ul>
                     <aside class="notes">
                         <p class="img-attribution">
@@ -511,7 +511,7 @@ bin/atoum && bin/behat
                     <ul>
                         <li>Initialisation de l'env de dev</li>
                         <li>Connexion serveurs dev, preprod, prod</li>
-                        <li>Déploiement clefs ssh</li>
+                        <li>Déploiement clefs SSH</li>
                     </ul>
                     <aside class="notes">
                         <p class="img-attribution">
