Escape < for safety

--- a/slides/index.html
+++ b/slides/index.html
@@ -139,7 +139,7 @@
                     <ul>
                         <li>Git, Github</li>
                         <li>(Portable) Linux, Mac</li>
-                        <li>HipChat <3</li>
+                        <li>HipChat &lt;3</li>
                     </ul>
                     <aside class="notes">
                         <p class="img-attribution">
