--- a/slides/index.html
+++ b/slides/index.html
@@ -57,8 +57,8 @@
                         <strong>Appuyez sur <kbd>[s]</kbd> pour ouvrir les <em>notes présentateur</em> dans une nouvelle fenêtre.</strong>
                     </p>
                     <aside class="notes">
-                        <p>Je vais essayer d'ajouter ici, pour certains slides, des points que j'ai pu donner à l'oral lors de la présentation et/ou qui ne sont pas explicitement écrits sur les slides — afin de les rendre plus utiles aux lecteurs qui n'auraient pas assisté à la présentation.</p>
-                        <p>Le style sera volontairement un peu <em>oral</em>, se rapprochant un peu de ce qui s'est dit lors de la présentation <em>live</em>.</p>
+                        <p>Je vais essayer d'ajouter ici, pour certains slides, des points que j’ai pu donner à l’oral lors de la présentation et/ou qui ne sont pas explicitement écrits sur les slides — afin de les rendre plus utiles aux lecteurs qui n’auraient pas assisté à la présentation.</p>
+                        <p>Le style sera volontairement un peu <em>oral</em>, se rapprochant un peu de ce qui s’est dit lors de la présentation <em>live</em>.</p>
                     </aside>
                 </section>
                 -->
@@ -102,7 +102,7 @@
                         </p>
                         <ul>
                             <li>Pascal, 4ème développeur de la boite (sans compter arrivées / départs entre temps), arrivé il a 8 mois</li>
-                            <li>Aujourd'hui, encore 2 devs de plus</li>
+                            <li>Aujourd’hui, encore 2 devs de plus</li>
                         </ul>
                     </aside>
                 </section>
@@ -114,7 +114,7 @@
                             <a href="https://www.flickr.com/photos/st3f4n/3419749236/in/set-72157616350171741">Photo</a> par <a href="https://www.flickr.com/photos/st3f4n/">Stéfan</a> sur Flickr, CC-BY-NC-SA.
                         </p>
                         <ul>
-                            <li>Aujourd'hui, 6 développeurs</li>
+                            <li>Aujourd’hui, 6 développeurs</li>
                             <li>Un 7ème bientôt</li>
                         </ul>
                     </aside>
@@ -162,9 +162,9 @@
                             <a href="https://www.flickr.com/photos/kalexanderson/5863576654/in/set-72157627198892736">Photo</a> par <a href="https://www.flickr.com/photos/kalexanderson/">Kristina Alexanderson</a> sur Flickr, CC-BY-NC-SA.
                         </p>
                         <ul>
-                            <li>Etat des lieux aujourd'hui</li>
-                            <li>VM : pas utilisées pour isoler les services ; uniquement pour faciliter les backups / le scaling / autres du côté de l'hébergeur, mais pas de réel intérêt "pour nous"</li>
-                            <li>Pas de Docker en production. Aujourd'hui.</li>
+                            <li>Etat des lieux aujourd’hui</li>
+                            <li>VM : pas utilisées pour isoler les services ; uniquement pour faciliter les backups / le scaling / autres du côté de l’hébergeur, mais pas de réel intérêt "pour nous"</li>
+                            <li>Pas de Docker en production. Aujourd’hui.</li>
                             <li>Toujours ouvert à améliorations</li>
                         </ul>
                     </aside>
@@ -180,14 +180,14 @@
                 </section>
 
                 <section data-background="./images/the-lonely-vacuum-of-space.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <p>Moué...</p>
+                    <p>Moué…</p>
                     <aside class="notes">
                         <p class="img-attribution">
                             <a href="https://www.flickr.com/photos/jdhancock/8955273266/in/set-72157618524893239">Photo</a> par <a href="https://www.flickr.com/photos/jdhancock/">JD Hancock</a> sur Flickr, CC-BY.
                         </p>
                         <ul>
                             <li>Bon, une semaine, projets compliqués, pourquoi pas</li>
-                            <li>Ca doit compter le temps de commencer à comprendre comment ça marche</li>
+                            <li>Ça doit compter le temps de commencer à comprendre comment ça marche</li>
                         </ul>
                     </aside>
                 </section>
@@ -208,14 +208,14 @@
                             <a href="https://www.flickr.com/photos/st3f4n/4286044406/in/set-72157616350171741">Photo</a> par <a href="https://www.flickr.com/photos/st3f4n/">Stéfan</a> sur Flickr, CC-BY-NC-SA.
                         </p>
                         <ul>
-                            <li>C'est beaucoup quand même</li>
+                            <li>C’est beaucoup quand même</li>
                             <li>Plate-forme hyper-ultra-mega-compliquée ?</li>
                         </ul>
                     </aside>
                 </section>
 
                 <section data-background="./images/the-new-imperial-web-solution.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <h2>Mais pourquoi ? ...</h2>
+                    <h2>Mais pourquoi ? …</h2>
                     <ul>
                         <li>+ de 20 projets</li>
                         <li>~ 13 serveurs</li>
@@ -233,11 +233,11 @@
 
 
                 <section data-background="./images/some-image.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <h2>... À l'image de la prod ?</h2>
+                    <h2>… À l’image de la prod ?</h2>
                     <ul>
                         <li>Architecture</li>
                         <li>Isolation des services</li>
-                        <li>Droits d'accès (fichiers, ressources)</li>
+                        <li>Droits d’accès (fichiers, ressources)</li>
                     </ul>
                     <aside class="notes">
                         <p class="img-attribution">
@@ -251,14 +251,14 @@
                 </section>
 
                 <section data-background="./images/the-rebels-new-weapon.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <h2>Pas d'automatisation</h2>
+                    <h2>Pas d’automatisation</h2>
                     <h3>2012 - 2013</h3>
                     <aside class="notes">
                         <p class="img-attribution">
                             <a href="https://www.flickr.com/photos/st3f4n/3447234153/in/set-72157616350171741/">Photo</a> par <a href="https://www.flickr.com/photos/st3f4n/">Stéfan</a> sur Flickr, CC-BY-NC-SA.
                         </p>
                         <ul>
-                            <li>Cf ce qu'on disait plus haut</li>
+                            <li>Cf ce qu’on disait plus haut</li>
                             <li>Tout à faire à la main, depuis les docs sur le wiki ; ce qui entraine des erreurs</li>
                             <li>Et docs pas toujours à jour ; ce qui entraine aussi des erreurs</li>
                         </ul>
@@ -275,8 +275,8 @@
                         <ul>
                             <li>https://www.flickr.com/photos/st3f4n/4372885123/in/set-72157616350171741</li>
                             <li>Lancement de la boite, pour aller vite, code fait par des presta</li>
-                            <li>Un peu "reverse-engineering" de ce qui avait fait pour l'installer sur les postes de dev</li>
-                            <li>Wiki : notes dans tous les sens (parfois contradictoires d'une fiche à l'autre !), commandes à copier-coller, pas mis à jour aussi régulièrement qu'il ne faudrait, fichiers de conf à créer à la main, instructions du genre "remplacer X par Y",, pas automatisé / automatisable</li>
+                            <li>Un peu "reverse-engineering" de ce qui avait fait pour l’installer sur les postes de dev</li>
+                            <li>Wiki : notes dans tous les sens (parfois contradictoires d’une fiche à l’autre !), commandes à copier-coller, pas mis à jour aussi régulièrement qu’il ne faudrait, fichiers de conf à créer à la main, instructions du genre "remplacer X par Y",, pas automatisé / automatisable</li>
                         </ul>
                     </aside>
                 </section>
@@ -293,7 +293,7 @@
                             <li>Vagrant : faciliter lancement / arrêt des VM</li>
                             <li>Installation manuelle dans les VM !</li>
                             <li>Tout à refaire à la main à chaque nouvelle installation</li>
-                            <li>Pas d'utilisation du provisionning de Vagrant</li>
+                            <li>Pas d’utilisation du provisionning de Vagrant</li>
                         </ul>
                     </aside>
                 </section>
@@ -306,10 +306,10 @@
                         </p>
                         <ul>
                             <li>Ou the-death-star-plans-are-not-in-he-main-computer.jpg ?</li>
-                            <li>Pas mal de perte d'efficacité</li>
+                            <li>Pas mal de perte d’efficacité</li>
                             <li>Côté positif : transmission (explication, réponse instantanée aux questions)</li>
                             <li>BEAUCOUP de mise à jour de documentations, en notant tout ce qui avait foiré lors de mon install</li>
-                            <li>Au final : poste + ou - installé ; un peu le bordel vu qu'il avait fallu tester plusieurs trucs, des fois, pour que ça marche</li>
+                            <li>Au final : poste + ou - installé ; un peu le bordel vu qu’il avait fallu tester plusieurs trucs, des fois, pour que ça marche</li>
                         </ul>
                     </aside>
                 </section>
@@ -338,10 +338,10 @@
                         <p class="img-attribution">
                         </p>
                         <ul>
-                            <li>Gain de temps à l'arrivée des nouveaux</li>
-                            <li>On a aussi fait ça parce qu'on a tous changé de machines, et donc tous on a du réinstaller</li>
+                            <li>Gain de temps à l’arrivée des nouveaux</li>
+                            <li>On a aussi fait ça parce qu’on a tous changé de machines, et donc tous on a du réinstaller</li>
                             <li>Re-jouable à volonté</li>
-                            <li>Cookbooks jouent aussi un rôle de doc ! Vu que pour installer quelque chose, on modifie les cookbooks et on fait une PR (vue par l'équipe, donc)</li>
+                            <li>Cookbooks jouent aussi un rôle de doc ! Vu que pour installer quelque chose, on modifie les cookbooks et on fait une PR (vue par l’équipe, donc)</li>
                             <li>Autres : Puppet, Ansible</li>
                         </ul>
                     </aside>
@@ -380,20 +380,20 @@ end
                         </p>
                         <ul>
                             <li>Backups réguliers en prod ; au besoin, on en récupère un</li>
-                            <li>Adapter = supprimer données confidentielles, anonymiser, ...</li>
+                            <li>Adapter = supprimer données confidentielles, anonymiser, …</li>
                             <li>Indexation : reconstruction depuis la DB, pour ce qui est généré par scripts (indexes moteurs de recherche, par exemple)</li>
                         </ul>
                     </aside>
                 </section>
 
                 <section data-background="./images/imperial-art-appreciation-red.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <h2>Malgré cela...</h2>
+                    <h2>Malgré cela…</h2>
                     <ul>
                         <li>Cloner le repo git</li>
                         <li>Créer la VM</li>
                         <li><code>composer install</code></li>
-                        <li>Les tests passent...</li>
-                        <li>... ou pas.</li>
+                        <li>Les tests passent…</li>
+                        <li>… ou pas.</li>
                     </ul>
                     <aside class="notes">
                         <p class="img-attribution">
@@ -450,8 +450,8 @@ end
                     <aside class="notes">
                         <ul>
                             <li>Même chose "après" lancement de la commande stow</li>
-                            <li>Si quelqu'un modifie un fichier de config, la modification passe dans la PR de la feature sur laquelle il bossait, et tous les collègues en profitent</li>
-                            <li>Si un poste des "trop différent" des autres, ça va poser problème ; pour l'instant, on voit sur un projet si "ça marche" (ça a l'air pas trop mal parti) ; ensuite on va faire pareil sur 1 ou 2 autres ; puis les suivants</li>
+                            <li>Si quelqu’un modifie un fichier de config, la modification passe dans la PR de la feature sur laquelle il bossait, et tous les collègues en profitent</li>
+                            <li>Si un poste des "trop différent" des autres, ça va poser problème ; pour l’instant, on voit sur un projet si "ça marche" (ça a l’air pas trop mal parti) ; ensuite on va faire pareil sur 1 ou 2 autres ; puis les suivants</li>
                         </ul>
                     </aside>
                 </section>
@@ -509,7 +509,7 @@ bin/atoum && bin/behat
                 <section data-background="./images/christmas-love.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
                     <h2>Boîte à outils</h2>
                     <ul>
-                        <li>Initialisation de l'env de dev</li>
+                        <li>Initialisation de l’env de dev</li>
                         <li>Connexion serveurs dev, preprod, prod</li>
                         <li>Déploiement clefs SSH</li>
                     </ul>
@@ -538,7 +538,7 @@ bin/atoum && bin/behat
                         </p>
                         <ul>
                             <li>Laisse quand même pas mal de liberté à chacun</li>
-                            <li>Autrement dit : avantages de l'automatisation, sans pour autant que ça ne soit une contrainte</li>
+                            <li>Autrement dit : avantages de l’automatisation, sans pour autant que ça ne soit une contrainte</li>
                         </ul>
                     </aside>
                 </section>
@@ -547,8 +547,8 @@ bin/atoum && bin/behat
                     <h2>En plus !</h2>
                     <ul>
                         <li>Facilite la montée de versions</li>
-                        <li>Mise en place d'une PIC</li>
-                        <li>Liberté d'expérimenter</li>
+                        <li>Mise en place d’une PIC</li>
+                        <li>Liberté d’expérimenter</li>
                     </ul>
                     <aside class="notes">
                         <p class="img-attribution">
@@ -557,7 +557,7 @@ bin/atoum && bin/behat
                         <ul>
                             <li>Utile pour migration versions PHP, Varnish, Apache -> nginx, Ruby</li>
                             <li>Cookbooks à mettre à jour par 1 personne, et tout le monde en profite</li>
-                            <li>Facile de basculer d'une version à l'autre (suffit de rebuilder la VM, au pire)</li>
+                            <li>Facile de basculer d’une version à l’autre (suffit de rebuilder la VM, au pire)</li>
                         </ul>
                     </aside>
                 </section>
@@ -575,7 +575,7 @@ bin/atoum && bin/behat
                         </p>
                         <ul>
                             <li>https://www.flickr.com/photos/st3f4n/4333068306/in/set-72157616350171741</li>
-                            <li>Stow : en place sur quelques projets, à poursuivre "au fil de l'eau"</li>
+                            <li>Stow : en place sur quelques projets, à poursuivre "au fil de l’eau"</li>
                             <li>Cookbooks : encore quelques projets (ceux sur lesquels on ne bosse en gros jamais) à faire</li>
                             <li></li>
                             <li></li>
@@ -597,7 +597,7 @@ bin/atoum && bin/behat
                         </p>
                         <ul>
                             <li>https://www.flickr.com/photos/st3f4n/4333068306/in/set-72157616350171741</li>
-                            <li>Stow : en place sur quelques projets, à poursuivre "au fil de l'eau"</li>
+                            <li>Stow : en place sur quelques projets, à poursuivre "au fil de l’eau"</li>
                             <li>Cookbooks : encore quelques projets (ceux sur lesquels on ne bosse en gros jamais) à faire</li>
                             <li></li>
                             <li></li>
@@ -607,7 +607,7 @@ bin/atoum && bin/behat
 
                 <section data-background="./images/are-you-sure-this-is-how-its-played.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
                     <h2>Pas toujours parfait</h2>
-                    <h3>L'important, c'est d'avancer</h3>
+                    <h3>L’important, c’est d’avancer</h3>
                     <aside class="notes">
                         <p class="img-attribution">
                             <a href="https://www.flickr.com/photos/lens-cap/13986579112/in/set-72157626730022370">Photo</a> par <a href="https://www.flickr.com/photos/lens-cap/">Jim Bauer</a> sur Flickr, CC-.
@@ -615,7 +615,7 @@ bin/atoum && bin/behat
                         <ul>
                             <li>Bien sûr, expérimenter ne mène pas toujours à une solution parfaite</li>
                             <li>Et encore moins du 1er coup</li>
-                            <li>Mais c'est comme ça qu'on avance, par petits incréments</li>
+                            <li>Mais c’est comme ça qu’on avance, par petits incréments</li>
                         </ul>
                     </aside>
                 </section>
@@ -637,8 +637,8 @@ bin/atoum && bin/behat
                             <a href="https://www.flickr.com/photos/st3f4n/3425510675/in/set-72157616350171741">Photo</a> par <a href="https://www.flickr.com/photos/st3f4n/">Stéfan</a> sur Flickr, CC-BY-NC-SA.
                         </p>
                         <ul>
-                            <li>On sera tous deux présents à l'apéro communautaire ce soir</li>
-                            <li>(vu qu'on fait la dernière conf de la journée, profitons-en)</li>
+                            <li>On sera tous deux présents à l’apéro communautaire ce soir</li>
+                            <li>(vu qu’on fait la dernière conf de la journée, profitons-en)</li>
                         </ul>
                     </aside>
                 </section>
