Code pour changer de slide à la souris
Codes :

 * bouton gauche => slide suivant
 * bouton droit => slide précédent

Le code est en commentaire, pour éviter les effets indésirables du genre
changement de slide alors qu'on ne voulait pas ; mais facile à décommenter
au cas où on ait un problème de télécommande le jour de la conférence.

--- a/slides/index.html
+++ b/slides/index.html
@@ -723,6 +723,17 @@ bin/atoum && bin/behat
                     $('#footer p').html("");
                 }
             });
+            
+            /*
+            // Navigation à la souris
+            window.addEventListener("mousedown", handleClick, false);
+            window.addEventListener("contextmenu", handleClick, false);
+            function handleClick(e) {
+                e.preventDefault();
+                if(e.button === 0) Reveal.next();
+                if(e.button === 2) Reveal.prev();
+            }
+            //*/
 
         </script>
 
