tag '#éléphpantarque' au lieu du sage '#php'wq

--- a/slides/index.html
+++ b/slides/index.html
@@ -96,7 +96,7 @@
                         <br/><a href="http://twitter.com/pascal_martin">@pascal_martin</a>
                     </p>
                     <p>
-                        #php #chatons #14h<strong>00</strong>
+                        #éléphpantarque #chatons #14h<strong>00</strong>
                     </p>
 
                     <aside class="notes">
