notes slide 'pmartin'

--- a/slides/index.html
+++ b/slides/index.html
@@ -107,8 +107,10 @@
                             <a href="https://www.flickr.com/photos/st3f4n/3419749236/in/set-72157616350171741">Photo</a> par <a href="https://www.flickr.com/photos/st3f4n/">Stéfan</a> sur Flickr, CC-BY-NC-SA.
                         </p>
                         <ul>
-                            <li>Pascal, 4ème développeur de la boite (sans compter arrivées / départs entre temps), arrivé il a 8 mois</li>
-                            <li>Aujourd’hui, encore 2 devs de plus</li>
+                            <li>Speaker : Pascal</li>
+                            <li>Pascal, 8 ans d'XP, SSII puis éditeur puis startup.</li>
+                            <li>Principalement du PHP, touche un peu à tout aussi.</li>
+                            <li>J'aime les chats \o/</li>
                         </ul>
                     </aside>
                 </section>
