affichage (désactivé) du numéro de slide courant

--- a/slides/index.html
+++ b/slides/index.html
@@ -825,6 +825,7 @@ bin/atoum && bin/behat
                 transition: 'none', // default/cube/page/concave/zoom/linear/fade/none
                 width: 1280,
                 height: 853,
+                slideNumber: false,
 
                 // Optional libraries used to extend on reveal.js
                 dependencies: [
