ajout d'un slide avec la commande stow

--- a/slides/index.html
+++ b/slides/index.html
@@ -475,7 +475,7 @@ end
                     </aside>
                 </section>
 
-                <section>
+                <section class="without-darkback">
                     <h2>Stow</h2>
                     <p>
                         Arborescence extraite de git
@@ -503,7 +503,19 @@ $ tree
                     </aside>
                 </section>
 
-                <section>
+                <section class="without-darkback">
+                    <h2>Stow</h2>
+                    <pre><code data-trim>
+stow --dir=config-dist --target=. lxc
+                    </code></pre>
+                    <aside class="notes">
+                        <ul>
+                            <li>Speaker : Pascal</li>
+                        </ul>
+                    </aside>
+                </section>
+
+                <section class="without-darkback">
                     <h2>Stow</h2>
                     <p>
                         Arborescence avec les symlinks
