exemples stow > pas de coloration syntaxique horrible

--- a/slides/index.html
+++ b/slides/index.html
@@ -480,7 +480,7 @@ end
                     <p>
                         Arborescence extraite de git
                     </p>
-                    <pre><code data-trim>
+                    <pre>
 $ tree
 .
 |-- app
@@ -492,8 +492,7 @@ $ tree
         |   `-- config
         |       `-- specifique-appli.txt
         `-- config
-            `-- test.yml
-                    </code></pre>
+            `-- test.yml</pre>
                     <aside class="notes">
                         <ul>
                             <li>Speaker : Pascal</li>
@@ -505,9 +504,8 @@ $ tree
 
                 <section class="without-darkback">
                     <h2>Stow</h2>
-                    <pre><code data-trim>
-stow --dir=config-dist --target=. lxc
-                    </code></pre>
+                    <pre>
+stow --dir=config-dist --target=. lxc</pre>
                     <aside class="notes">
                         <ul>
                             <li>Speaker : Pascal</li>
@@ -520,7 +518,7 @@ stow --dir=config-dist --target=. lxc
                     <p>
                         Arborescence avec les symlinks
                     </p>
-                    <pre><code data-trim>
+                    <pre>
 $ tree
 .
 |-- app
@@ -535,8 +533,7 @@ $ tree
         |   `-- config
         |       `-- specifique-appli.txt
         `-- config
-            `-- test.yml
-                    </code></pre>
+            `-- test.yml</pre>
                     <aside class="notes">
                         <ul>
                             <li>Speaker : Pascal</li>
