ajout infos de contact (blog + twitter) pour chacun d'entre nous sur le slide 'question'

--- a/slides/index.html
+++ b/slides/index.html
@@ -742,6 +742,14 @@ bin/atoum && bin/behat
 
                 <section data-background="./images/die-stormtrooper-die.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
                     <h1>Questions ?</h1>
+                    <p>
+                        <a href="http://koin.github.io">http://koin.github.io</a>
+                        <br /><a href="http://twitter.com/PKoin">@PKoin</a>
+                    </p>
+                    <p>
+                        <a href="http://blog.pascal-martin.fr">http://blog.pascal-martin.fr</a>
+                        <br /><a href="http://twitter.com/pascal_martin">@pascal_martin</a>
+                    </p>
                     <aside class="notes">
                         <p class="img-attribution">
                             <a href="https://www.flickr.com/photos/jdhancock/3582171012/in/set-72157618524893239">Photo</a> par <a href="https://www.flickr.com/photos/jdhancock/">JD Hancock</a> sur Flickr, CC-BY.
