Ajout de 'fragment' sur slides stow
Et un peu de reformatage (code, strong)

--- a/slides/index.html
+++ b/slides/index.html
@@ -444,7 +444,7 @@ end
                         <li>Créer la VM</li>
                         <li><code>composer install</code></li>
                         <li>Les tests passent…</li>
-                        <li>… ou pas.</li>
+                        <li class="fragment">… <strong>ou pas !</strong></li>
                     </ul>
                     <aside class="notes">
                         <p class="img-attribution">
@@ -460,8 +460,8 @@ end
                     <h2>Configuration</h2>
                     <h3>Très chronophage</h3>
                     <ul>
-                        <li>Avant : fichiers .dist</li>
-                        <li>Maintenant : stow</li>
+                        <li>Avant : fichiers <code>.dist</code></li>
+                        <li class="fragment">Maintenant : <code>stow</code></li>
                     </ul>
                     <aside class="notes">
                         <p class="img-attribution">
