(détail) ajout explicite de JFO en speaker sur slide 'objectif atteint', pour éviter qu'on se pose la question

--- a/slides/index.html
+++ b/slides/index.html
@@ -546,6 +546,7 @@ end
                             <a href="https://www.flickr.com/photos/jdhancock/3795174312/in/set-72157618524893239">Photo</a> par <a href="https://www.flickr.com/photos/jdhancock/">JD Hancock</a> sur Flickr, CC-BY.
                         </p>
                         <ul>
+                            <li>Speaker : Julien</li>
                             <li>Pas de longue étape "créer tous les fichiers de conf avec les bonnes valeurs"</li>
                         </ul>
                     </aside>
