background noir pour exemples stow et dnsmasq, pour uniformiser avec les autres exemples de code

--- a/slides/index.html
+++ b/slides/index.html
@@ -506,7 +506,7 @@ end
                     </aside>
                 </section>
 
-                <section class="without-darkback">
+                <section data-background-color="#000000" class="inverted">
                     <h2>Stow</h2>
                     <p>
                         Arborescence extraite de git
@@ -533,10 +533,10 @@ $ tree
                     </aside>
                 </section>
 
-                <section class="without-darkback">
+                <section data-background-color="#000000" class="inverted">
                     <h2>Stow</h2>
                     <pre>
-stow --dir=config-dist --target=. local</pre>
+$ stow --dir=config-dist --target=. local</pre>
                     <aside class="notes">
                         <ul>
                             <li>Speaker : Pascal</li>
@@ -544,7 +544,7 @@ stow --dir=config-dist --target=. local</pre>
                     </aside>
                 </section>
 
-                <section class="without-darkback">
+                <section data-background-color="#000000" class="inverted">
                     <h2>Stow</h2>
                     <p>
                         Arborescence avec les symlinks
@@ -592,7 +592,7 @@ $ tree
                     </aside>
                 </section>
 
-                <section  class="without-darkback">
+                <section data-background-color="#000000" class="inverted">
                     <h2>Sur le poste de dev.</h2>
                     <pre>
 # /etc/dnsmasq.conf
@@ -615,7 +615,7 @@ sudo /etc/init.d/dnsmasq restart</pre>
                     </aside>
                 </section>
                 
-                <section  class="without-darkback">
+                <section data-background-color="#000000" class="inverted">
                     <h2>Sur les VMs</h2>
                     <pre>
 apt-get install resolvconf</pre>
