ajout d'un br sur le slide de titre et de nbsp ici et là

--- a/slides/index.html
+++ b/slides/index.html
@@ -43,7 +43,7 @@
             <div class="slides">
 
                 <section data-background="./images/im-the-droid-you-re-looking-for.jpg" id="title">
-                    <h1>Notre env. de dév. n’est plus un bizutage&nbsp;!</h1>
+                    <h1>Notre env. de dév. n’est plus un<br />bizutage&nbsp;!</h1>
                     <aside class="notes">
                         L'installation était vécu comme un bizutage par les nouveaux arrivants
                         Retour d'expérience de pourquoi plutôt qu'un listing de commande
@@ -178,7 +178,7 @@
                         <li>MySQL, MongoDB, Redis</li>
                         <li>Silex, Symfony 1.4, Rails 3, Rails 4, Magento, …</li>
                         <li>Outils propriétaires</li>
-                        <li>Déploiement : capistrano</li>
+                        <li>Déploiement&nbsp;: capistrano</li>
                     </ul>
                     <aside class="notes">
                         <p class="img-attribution">
@@ -197,7 +197,7 @@
                 </section>
 
                 <section class="without-darkback">
-                    <blockquote>«&nbsp;Bienvenue ! Tu vas prendre en gros la semaine pour installer ton poste.&nbsp;(sic)&nbsp;»</blockquote>
+                    <blockquote>«&nbsp;Bienvenue&nbsp;! Tu vas prendre en gros la semaine pour installer ton poste.&nbsp;(sic)&nbsp;»</blockquote>
                     <aside class="notes">
                         <ul>
                             <li>Speaker : Pascal</li>
@@ -245,7 +245,7 @@
                 </section>
 
                 <section data-background="./images/the-new-imperial-web-solution.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <h2>Mais pourquoi ? …</h2>
+                    <h2>Mais pourquoi&nbsp;?&nbsp;…</h2>
                     <ul>
                         <li>+ de 20 projets</li>
                         <li>~ 13 serveurs</li>
@@ -266,7 +266,7 @@
 
 
                 <section data-background="./images/lets-use-linux-to-find-the-droids.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <h2>… À l’image de la prod ?</h2>
+                    <h2>… À l’image de la prod&nbsp;?</h2>
                     <ul>
                         <li>Architecture</li>
                         <li>Isolation des services</li>
@@ -301,7 +301,7 @@
 
                 <section data-background="./images/back-to-school.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
                     <h2>Au départ</h2>
-                    <p>Doc peu (pas ?) à jour sur un wiki</p>
+                    <p>Doc peu (pas&nbsp;?) à jour sur un wiki</p>
                     <aside class="notes">
                         <p class="img-attribution">
                             <a href="https://www.flickr.com/photos/st3f4n/3874830285/in/set-72157616350171741">Photo</a> par <a href="https://www.flickr.com/photos/st3f4n/">Stéfan</a> sur Flickr, CC-BY-NC-SA.
@@ -450,7 +450,7 @@ end
                 </section>
 
                 <section data-background="./images/no-more-rabbits.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <h2>Pour les données ? Scripts !</h2>
+                    <h2>Pour les données&nbsp;? Scripts&nbsp;!</h2>
                     <ul>
                         <li>(bash) Import depuis la prod</li>
                         <li>(SQL) Nettoyage des données sensibles</li>
@@ -475,7 +475,7 @@ end
                         <li>Créer la VM</li>
                         <li><code>composer install</code></li>
                         <li>Les tests passent…</li>
-                        <li class="fragment">… <strong>ou pas !</strong></li>
+                        <li class="fragment">… <strong>ou pas&nbsp;!</strong></li>
                     </ul>
                     <aside class="notes">
                         <p class="img-attribution">
@@ -491,8 +491,8 @@ end
                     <h2>Configuration</h2>
                     <h3>Très chronophage</h3>
                     <ul>
-                        <li>Avant : fichiers <code>.dist</code></li>
-                        <li class="fragment">Maintenant : <code>stow</code></li>
+                        <li>Avant&nbsp;: fichiers <code>.dist</code></li>
+                        <li class="fragment">Maintenant&nbsp;: <code>stow</code></li>
                     </ul>
                     <aside class="notes">
                         <p class="img-attribution">
@@ -632,7 +632,7 @@ nameserver 192.168.3.1</pre>
                 </section>
 
                 <section data-background="./images/imperial-art-appreciation-green.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <h2>Objectif atteint !</h2>
+                    <h2>Objectif atteint&nbsp;!</h2>
                     <aside class="notes">
                         <p class="img-attribution">
                             <a href="https://www.flickr.com/photos/jdhancock/3795174312/in/set-72157618524893239">Photo</a> par <a href="https://www.flickr.com/photos/jdhancock/">JD Hancock</a> sur Flickr, CC-BY.
@@ -645,7 +645,7 @@ nameserver 192.168.3.1</pre>
                 </section>
 
                 <section data-background="./images/some-image.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <h2>Objectif atteint !</h2>
+                    <h2>Objectif atteint&nbsp;!</h2>
                     <pre>
                         <code class="bash">
 $ git clone mon-projet.git
@@ -766,7 +766,7 @@ connect() {
                 </section>
 
                 <section data-background="./images/playing-scrabble.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <h2>En plus !</h2>
+                    <h2>En plus&nbsp;!</h2>
                     <ul>
                         <li>Facilite la montée de versions</li>
                         <li>Mise en place d’une PIC</li>
@@ -805,7 +805,7 @@ connect() {
 
 
                 <section data-background="./images/ready-for-takeoff.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <h2>Expérimenter !</h2>
+                    <h2>Expérimenter&nbsp;!</h2>
                     <ul>
                         <li>Docker</li>
                         <li>PHP 5.6</li>
@@ -858,7 +858,7 @@ connect() {
                 </section>
 
                 <section data-background="./images/die-stormtrooper-die.jpg" data-background-size="contain" data-background-color="#000000" class="inverted">
-                    <h1>Questions ?</h1>
+                    <h1>Questions&nbsp;?</h1>
                     <p>
                         <a href="http://koin.github.io">http://koin.github.io</a>
                         <br /><a href="http://twitter.com/PKoin">@PKoin</a>
